# Visual-Blueprint

./: .gitignore  CMakeLists.txt  README.md  VisualBlueprint.pro  VisualBlueprint_en_US.ts  bp_utils.cpp  bp_utils.h  license.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
Core/: bp_class.cpp  bp_class.h  bp_constructor.cpp  bp_constructor.h  bp_coreobject.cpp  bp_coreobject.h  bp_function.cpp  bp_function.h  bp_module.cpp  bp_module.h  bp_parameter.cpp  bp_parameter.h  bp_project.cpp  bp_project.h  bp_variable.cpp  bp_variable.h
Graph/: bp_async.cpp  bp_async.h  bp_framebranch.cpp  bp_framebranch.h  bp_graphscene.cpp  bp_graphscene.h  bp_graphutils.cpp  bp_graphutils.h  bp_graphview.cpp  bp_graphview.h  bp_node.cpp  bp_node.h  bp_slot.cpp  bp_slot.h  bp_thread.cpp  bp_thread.h  graph_interface.h
Graph/Links/: bp_flowlink.cpp  bp_flowlink.h  bp_link.cpp  bp_link.h
Graph/Nodes/: bp_addnode.cpp  bp_addnode.h  bp_boolnode.cpp  bp_boolnode.h  bp_classinstancenode.cpp  bp_classinstancenode.h  bp_eventnode.cpp  bp_eventnode.h  bp_floatnode.cpp  bp_floatnode.h  bp_functionnode.cpp  bp_functionnode.h  bp_ifnode.cpp  bp_ifnode.h  bp_intnode.cpp  bp_intnode.h  bp_logicalnode.cpp  bp_logicalnode.h  bp_loopnode.cpp  bp_loopnode.h  bp_operationtoolnode.cpp  bp_operationtoolnode.h  bp_stringnode.cpp  bp_stringnode.h  bp_variablenode.cpp  bp_variablenode.h
Graph/Nodes/Async/: bp_asynctoolnode.cpp  bp_asynctoolnode.h  bp_runasyncnode.cpp  bp_runasyncnode.h
Graph/Nodes/Operations/: bp_substractnode.cpp  bp_substractnode.h
Graph/Nodes/Threading/: bp_createthreadsnode.cpp  bp_createthreadsnode.h  bp_threadingtool.cpp  bp_threadingtool.h
Graph/Slots/: bp_dataslot.cpp  bp_dataslot.h  bp_flowslot.cpp  bp_flowslot.h
Modeling/: importsmodel.cpp  importsmodel.h
Modeling/Graph/: bp_graphnodeitem.cpp  bp_graphnodeitem.h  bp_graphnodesmodel.cpp  bp_graphnodesmodel.h
Modeling/Imports/: bp_importedmodel.cpp  bp_importedmodel.h  bp_importsfunctionitem.cpp  bp_importsfunctionitem.h  bp_importsitem.cpp  bp_importsitem.h  bp_importsmoduleitem.cpp  bp_importsmoduleitem.h  bp_importstypeitem.cpp  bp_importstypeitem.h  bp_importsvariableitem.cpp  bp_importsvariableitem.h  importeddelegat.cpp  importeddelegat.h
Modeling/Members/: bp_memberdelegate.cpp  bp_memberdelegate.h  bp_memberitem.cpp  bp_memberitem.h  bp_membersmodel.cpp  bp_membersmodel.h  bp_onevariablememberitem.cpp  bp_onevariablememberitem.h  bp_variablesmemberitem.cpp  bp_variablesmemberitem.h
Platform/: bp_managerprocess.cpp  bp_managerprocess.h  bp_platformmanager.cpp  bp_platformmanager.h  vbl_grantleelibrary.cpp  vbl_grantleelibrary.h
Platform/Python/: bp_pythonmanager.cpp  bp_pythonmanager.h  python_manager.py  renderimportfilter.cpp  renderimportfilter.h
Platform/Python/templates/: ClassInstance.j2  CreateThreads.j2  Function.j2  IFStatement.j2  LoopStatement.j2  MemberFunction.j2  Node.j2  Operation.j2  RunAsync.j2  inspect_mudule.j2  project.j2  project_async.j2
Widgets/: graphnodesselectiondialog.cpp  graphnodesselectiondialog.h  graphnodesselectiondialog.ui  importeddelegatewidget.cpp  importeddelegatewidget.h  importeddelegatewidget.ui  importsitemwidget.cpp  importsitemwidget.h  importsitemwidget.ui  variableeditorwidget.cpp  variableeditorwidget.h  variableeditorwidget.ui
templates/: OperationToolState  ToVariantState.st  ToolNodeState.st
